fix: add changes to project config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,36 +1,34 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
+  "plugins": ["prettier", "import", "@typescript-eslint"],
   "extends": [
-    "airbnb-typescript/base",
+    "plugin:prettier/recommended",
+    "prettier",
     "eslint:recommended",
-    "plugin:import/recommended",
     "plugin:@typescript-eslint/recommended"
   ],
-  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    // "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "env": {
+    "es6": true,
+    "browser": true,
+    "node": true
+  },
+  "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/no-explicit-any": 2,
     "no-plusplus": "off",
-    "no-console": "error",
+    "no-console": 0,
+    "no-debugger": "off",
+    "class-methods-use-this": "off",
     "max-len": ["warn", { "code": 120 }],
     "indent": ["warn", 2, {
       "SwitchCase": 1
     }],
     "@typescript-eslint/indent": ["warn", 2, {
       "SwitchCase": 1
-    }],
-    "import/prefer-default-export": "off",
-    "no-param-reassign": ["error", {
-      "props": false
     }]
-  },
-  "ignorePatterns": ["*config.js"]
+  }
 }
