--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.57.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
