--- a/.eslintrc
+++ b/.eslintrc
@@ -8,8 +8,7 @@
   ],
   "parserOptions": {
     "ecmaVersion": 2020,
-    "sourceType": "module",
-    // "project": "./tsconfig.json"
+    "sourceType": "module"
   },
   "env": {
     "es6": true,
@@ -19,6 +18,7 @@
   "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/no-explicit-any": 2,
+    "@typescript-eslint/no-var-requires": 0,
     "no-plusplus": "off",
     "no-console": 0,
     "no-debugger": "off",
