--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "csv-loader": "^3.0.5",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-webpack-plugin": "^3.2.0",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
